# Financial-Agent

./: .env.example  CONTRIBUTING.md  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  session-ses_13a8.md
agents/: advisor_agent.py  analysis_agent.py  anomaly_agent.py  budget_agent.py  categorization_agent.py  forecast_agent.py  goal_planning_agent.py  ingestion_agent.py  investment_readiness_agent.py  orchestrator.py
api/v1/: advisor.py  alerts.py  chat.py  dashboard.py  ingestion.py  simulation.py
core/: config.py  database.py  deps.py  llm_logger.py  logger.py  scheduler.py
db/: setup.sql  supabase_setup.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Upload.tsx
frontend/src/services/: api.ts
logs/llm/: llm_20260615_174952_506322.txt  llm_20260615_175132_745366.txt
schemas/: models.py  routing.py  state.py
services/: analytics.py  anomaly_service.py  category_service.py  embedding_service.py  forecaster.py  ingestion_service.py  llm_service.py  monitoring_service.py  notification_service.py  parsing_service.py  pipeline_service.py  subscription_service.py
tests/: conftest.py  test_analytics.py  test_anomaly.py  test_forecast.py  test_parsing.py  test_schemas.py
