[project]
name = "financial-agentic-system"
version = "0.1.0"
description = "Autonomous multi-agent financial wellness system"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
